--- a/exercicepythonrest.ipynb
+++ b/exercicepythonrest.ipynb
@@ -381,7 +381,206 @@
    "cell_type": "markdown",
    "id": "a6d762cc",
    "metadata": {},
-   "source": []
+   "source": [
+    "Écrivez un programme Python pour trouver les nombres divisibles par 7 et multiples de 5, entre 1 500 et 2 700 (tous deux inclus).\n",
+    "\n",
+    "for x in range(1500, 2701):\n",
+    "\n",
+    "1505,1540,1575,1610,1645,1680,1715,1750,1785,1820,1855,1890,1925,1960,1995,2030,2065,2100,2135,2170,2205,2240,\n",
+    "2275,2310,2345,2380,2415,2450,2485,2520,2555,2590,2625,2660,2695"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "75845cb1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1505, 1540, 1575, 1610, 1645, 1680, 1715, 1750, 1785, 1820, 1855, 1890, 1925, 1960, 1995, 2030, 2065, 2100, 2135, 2170, 2205, 2240, 2275, 2310, 2345, 2380, 2415, 2450, 2485, 2520, 2555, 2590, 2625, 2660, 2695, "
+     ]
+    }
+   ],
+   "source": [
+    "def divisible_par_7_et_multiple_de_5(n):\n",
+    "    return n % 35 == 0  # 35 est le PPCM de 5 et 7\n",
+    "\n",
+    "for i in range(1500,2700):\n",
+    "    if divisible_par_7_et_multiple_de_5(i):\n",
+    "        print(i, end=', ')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "edf9d0ee",
+   "metadata": {},
+   "source": [
+    "Écrivez un programme Python pour convertir les températures vers et depuis Celsius et Fahrenheit.\n",
+    "\n",
+    "temp = input(\"Input the temperature you like to convert? (e.g., 45F, 102C etc.) : \")\n",
+    "\n",
+    "Saisissez la température que vous souhaitez convertir ? (par exemple, 45F, 102C etc.) : 104f                                     \n",
+    "La température en Celsius est de 40 degrés."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9b31233",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convertir_Celsius_en_Fahrenheit(celsius):\n",
+    "    fahrenheit = (celsius * 9/5) + 32\n",
+    "    return fahrenheit\n",
+    "def convertire_Farhenheit_en_Celsius(fahrenheit):\n",
+    "    celsius = (fahrenheit - 32) * 5/9\n",
+    "    return celsius \n",
+    "\n",
+    "def temperature_conversion(value, scale):\n",
+    "    # Selon la valeur de scale on appelle la fonction appropriée\n",
+    "    if scale == 'C':\n",
+    "        return convertir_Celsius_en_Fahrenheit(value)\n",
+    "    elif scale == 'F':\n",
+    "        return convertire_Farhenheit_en_Celsius(value)\n",
+    "    else:\n",
+    "        raise ValueError(\"La valeur de scale doit être 'C' pou Celsius ou 'F' pour Fahrenheit\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4d1740e",
+   "metadata": {},
+   "source": [
+    "Écrire un programme Python pour compter le nombre de nombres pairs et impairs dans une série de nombres\n",
+    "\n",
+    "numbers = (1, 2, 3, 4, 5, 6, 7, 8, 9)\n",
+    "\n",
+    "\n",
+    "Nombre de nombres pairs : 4                                                                                    \n",
+    "Nombre de nombres impairs : 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "061d47ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'le nombre de chiffre paire est 4 impaire 5'"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def compter_paires_et_impaires(liste):\n",
+    "    paires = sum(1 for x in liste if x % 2 == 0)\n",
+    "    # Si un nombre n'est pas paire alors il est impaire\n",
+    "    impaires = len(liste) - paires\n",
+    "    return f\"le nombre de chiffre paire est {paires} impaire {impaires}\"\n",
+    "\n",
+    "\n",
+    "compter_paires_et_impaires([1,2,3,4,5,6,7,8,9])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b0e69ae",
+   "metadata": {},
+   "source": [
+    "Écrivez un programme Python qui itère les entiers de 1 à 50. Pour les multiples de trois, imprimez « Fizz » au lieu du nombre et pour les multiples de cinq, imprimez « Buzz ». Pour les nombres multiples de trois et cinq, imprimez « FizzBuzz »."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "3393ae57",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1',\n",
+       " '2',\n",
+       " 'Fizz',\n",
+       " '4',\n",
+       " 'Buzz',\n",
+       " 'Fizz',\n",
+       " '7',\n",
+       " '8',\n",
+       " 'Fizz',\n",
+       " 'Buzz',\n",
+       " '11',\n",
+       " 'Fizz',\n",
+       " '13',\n",
+       " '14',\n",
+       " 'FizzBuzz',\n",
+       " '16',\n",
+       " '17',\n",
+       " 'Fizz',\n",
+       " '19',\n",
+       " 'Buzz',\n",
+       " 'Fizz',\n",
+       " '22',\n",
+       " '23',\n",
+       " 'Fizz',\n",
+       " 'Buzz',\n",
+       " '26',\n",
+       " 'Fizz',\n",
+       " '28',\n",
+       " '29',\n",
+       " 'FizzBuzz',\n",
+       " '31',\n",
+       " '32',\n",
+       " 'Fizz',\n",
+       " '34',\n",
+       " 'Buzz',\n",
+       " 'Fizz',\n",
+       " '37',\n",
+       " '38',\n",
+       " 'Fizz',\n",
+       " 'Buzz',\n",
+       " '41',\n",
+       " 'Fizz',\n",
+       " '43',\n",
+       " '44',\n",
+       " 'FizzBuzz',\n",
+       " '46',\n",
+       " '47',\n",
+       " 'Fizz',\n",
+       " '49',\n",
+       " 'Buzz']"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def Fizz_Buzz(n):\n",
+    "    result = []\n",
+    "    for i in range(1, n + 1):\n",
+    "        if i % 3 == 0 and i % 5 == 0:\n",
+    "            result.append(\"FizzBuzz\")\n",
+    "        elif i % 3 == 0:\n",
+    "            result.append(\"Fizz\")\n",
+    "        elif i % 5 == 0:\n",
+    "            result.append(\"Buzz\")\n",
+    "        else:\n",
+    "            result.append(str(i))\n",
+    "    return result\n",
+    "Fizz_Buzz(50)"
+   ]
   }
  ],
  "metadata": {
